# activity-logger

./: .gitignore  README.md  config.example.yaml  pyproject.toml
activity_logger/: __main__.py  cli.py  config.py  tracker.py
activity_logger/analysis/: __init__.py  exporter.py
activity_logger/collectors/: __init__.py  idle.py  window.py
activity_logger/dashboard/: __init__.py  app.py
activity_logger/dashboard/templates/: index.html
activity_logger/storage/: __init__.py  db.py
activity_logger/sync/: __init__.py  phone.py
scripts/: install_autostart.py
