[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "activity-logger"
version = "0.1.0"
description = "Personal activity tracker — logs app usage, idle time, and habits for AI analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["productivity", "tracking", "activity", "habits", "self-improvement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1",
    "flask>=3.0",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "pystray>=0.19; sys_platform != 'linux'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]

[project.scripts]
activity-logger = "activity_logger.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["activity_logger*"]

[tool.setuptools.package-data]
"activity_logger.dashboard" = ["templates/*.html"]
